# kumo

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  RayTracer.mk  RayTracer.sln  RayTracer.txt  RayTracer.vcxproj  RayTracer.vcxproj.filters  Renderer_1024.ppm  Renderer_1024分层.ppm  Renderer_128.ppm  Renderer_256.ppm  Renderer_4 096分层.ppm  Renderer_512.ppm  Renderer_64.ppm  Renderer_64_s_jitter_on.ppm  Renderer_tri1.ppm  ShadeRec.cpp  ShadeRec.h  main.cpp
Scene/: Scene.cpp  Scene.h
base/: RGB.cpp  RGB.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
brdf/: BRDF.h  CookTorrance.cpp  CookTorrance.h  GlossySpecular.cpp  GlossySpecular.h  GlossySpecularHalfVector.cpp  GlossySpecularHalfVector.h  HalfVectorSpecular.cpp  HalfVectorSpecular.h  Lambertian.cpp  Lambertian.h  TorranceSparrowSpecular.cpp  TorranceSparrowSpecular.h
camera/: Camera.cpp  Camera.h  PinholeCamera.cpp  PinholeCamera.h
common/: Film.cpp  Film.h  Picture.cpp  Picture.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h
core/: BRDF.h  Camera.cpp  Camera.h  Film.cpp  Film.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  OldFilm.cpp  OldFilm.h  OldLight.cpp  OldLight.h  RGB.cpp  RGB.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  diffgeom.cpp  diffgeom.h  film.h  filter.h  geometry.cpp  geometry.h  global.h  integrator.cpp  integrator.h  light.cpp  light.h  material.h  memory.cpp  memory.h  montecarlo.cpp  montecarlo.h  parallel.cpp  parallel.h  primitive.cpp  (+10 more)
film/: png.h  ppm.cpp  ppm.h
filter/: box.h  triangle.h
integrator/: SimpleIntegrator.cpp  (+5 more)
(+238 files in other folders)
